--- a/build.config.json
+++ b/build.config.json
@@ -63,7 +63,7 @@
     {
       "provider": "github",
       "owner": "RyanProMax",
-      "repo": "electron-react-rspack"
+      "repo": "vtuber"
     }
   ]
 }
