--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "electron-react-rspack",
+  "name": "vtuber",
+  "version": "0.0.1",
   "author": "Ryan",
-  "homepage": "https://github.com/RyanProMax/electron-react-rspack#readme",
+  "homepage": "https://github.com/RyanProMax/vtuber#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RyanProMax/electron-react-rspack.git"
+    "url": "git+https://github.com/RyanProMax/vtuber.git"
   },
-  "version": "0.0.5",
   "description": "An Electron boilerplate including TypeScript, React, Rspack and ESLint.",
   "main": "build/loader.js",
   "scripts": {
