--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@arco-design/web-react": "^2.55.0",
     "@rspack/cli": "^0.3.6",
     "@svgr/webpack": "^8.1.0",
+    "@types/crypto-js": "^4.1.3",
     "@types/fs-extra": "^11.0.2",
     "@types/lodash": "^4.14.199",
     "@types/lodash-es": "^4.17.10",
@@ -43,12 +44,14 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "@types/uuid": "^9.0.6",
+    "@types/ws": "^8.5.8",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "axios": "^1.6.0",
     "classnames": "^2.3.2",
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "electron": "^26.2.4",
     "electron-builder": "^24.6.4",
@@ -67,7 +70,8 @@
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.14.2"
   },
   "devEngines": {
     "node": ">=16.x",
