--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "openai": "^4.14.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
